k8s/prom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
      #nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: 'prom'
spec:
  tls:
    - hosts:
      - 'grafana.rolancia.com'
      secretName: 'prom'
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom-grafana
                port:
                  number: 80
      host: grafana.rolancia.com
